[package]
name = "catsay"
version = "0.1.0"
edition = "2021"
authors = ["Emad Baqeri <ebaqeri@protonmail.com>"]
description = "What a cat says in CLI?"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
colored = "1.7.0"
failure = "0.1.5"
exitfailure = "0.5.1"
assert_cmd = "2.0.4"
predicates  =  "1.0.0"
